src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-[#F4F4F0] text-[#111] antialiased;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}
.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

/* Hide default search input cancel button */
input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none;
  appearance: none;
}

/* Custom Checkbox Blueprint Style */
input[type="checkbox"] {
  appearance: none;
  background-color: transparent;
  margin: 0;
  font: inherit;
  color: currentColor;
  width: 14px;
  height: 14px;
  border: 1px solid #111;
  display: grid;
  place-content: center;
}
input[type="checkbox"]::before {
  content: "";
  width: 8px;
  height: 8px;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em #111;
  background-color: CanvasText;
}
input[type="checkbox"]:checked::before {
  transform: scale(1);
}

